WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239006
Element::isFocusableWithoutResolvingFullStyle() inert checks do not update right away
https://bugs.webkit.org/show_bug.cgi?id=239006
Summary
Element::isFocusableWithoutResolvingFullStyle() inert checks do not update ri...
Tim Nguyen (:ntim)
Reported
2022-04-08 09:16:08 PDT
They wait for the next style resolution to be up-to-date which causes test failures, see tests that regressed with
r290554
. While the user impact is low, this affects the interop-2022-dialog score.
Attachments
Patch
(7.74 KB, patch)
2022-11-09 04:02 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(12.03 KB, patch)
2022-11-09 05:22 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(14.28 KB, patch)
2022-11-09 09:58 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(20.85 KB, patch)
2022-11-11 07:34 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(21.02 KB, patch)
2022-11-11 08:39 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch for landing
(21.23 KB, patch)
2022-11-12 01:36 PST
,
Antti Koivisto
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-04-08 09:16:17 PDT
<
rdar://problem/91485677
>
Tim Nguyen (:ntim)
Comment 2
2022-08-10 16:46:45 PDT
***
Bug 243798
has been marked as a duplicate of this bug. ***
Antti Koivisto
Comment 3
2022-11-09 04:02:50 PST
Created
attachment 463467
[details]
Patch
Antti Koivisto
Comment 4
2022-11-09 05:22:07 PST
Created
attachment 463468
[details]
Patch
Antti Koivisto
Comment 5
2022-11-09 09:58:48 PST
Created
attachment 463469
[details]
Patch
Antti Koivisto
Comment 6
2022-11-11 07:34:24 PST
Created
attachment 463491
[details]
Patch
Antti Koivisto
Comment 7
2022-11-11 08:39:08 PST
Created
attachment 463492
[details]
Patch
Antti Koivisto
Comment 8
2022-11-12 01:36:37 PST
Created
attachment 463499
[details]
Patch for landing
EWS
Comment 9
2022-11-12 02:59:19 PST
Committed
256601@main
(2b519ff97e74): <
https://commits.webkit.org/256601@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 463499
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug