Cherry-pick 2b519ff97e74. rdar://problem/91485677

Element::isFocusableWithoutResolvingFullStyle() inert checks do not update right away
    https://bugs.webkit.org/show_bug.cgi?id=239006
    rdar://91485677

    Reviewed by Alan Baradlay.

    The code for resolving computed style in non-rendered subtree fails to take invalid
    ancestors into account. In this case the effective inertness (a fake property)
    fails to inherit from the document element.

    * LayoutTests/TestExpectations:
    * LayoutTests/imported/w3c/web-platform-tests/inert/inert-node-is-unfocusable-expected.txt:
    * LayoutTests/platform/ios-wk2/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-focusing-steps-inert-expected.txt: Removed.
    * LayoutTests/platform/ios-wk2/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-showModal-expected.txt: Removed.
    * LayoutTests/imported/w3c/web-platform-tests/inert/inert-node-is-unfocusable-expected.txt:

    imported/w3c/web-platform-tests/inert/inert-node-is-unfocusable.html is now passing except on Mac WK2 for some reason.

    * LayoutTests/editing/style/apply-style-atomic-expected.txt:
    * LayoutTests/editing/style/apply-style-atomic-live-range-expected.txt:

    These results now correctly include <progress> inside the link.

    * LayoutTests/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/remove-dialog-should-unblock-document-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/svg/struct/scripted/autofocus-attribute-expected.txt:
    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::setFocusedElement):

    Focusability may depend on :focus-within matching as if the focus was already set.
    Set it tentatively before testing. This is tested in
    imported/w3c/web-platform-tests/css/selectors/focus-within-010.html

    * Source/WebCore/dom/Element.cpp:
    (WebCore::Element::setHasTentativeFocus):
    (WebCore::Element::resolveComputedStyle):

    This failed to check if any ancestor has invalid computed style. Due to inheritance that can affect the result.

    (WebCore::Element::isFocusableWithoutResolvingFullStyle const):

    All display:none checks are now done in resolveComputedStyle as it needs to traverse to the root anyway.

    (WebCore::Element::hasValidStyle const): Deleted.
    * Source/WebCore/dom/Element.h:

    Canonical link: https://commits.webkit.org/256601@main

Canonical link: https://commits.webkit.org/252432.902@safari-7614-branch